--- a/keepcalm.html
+++ b/keepcalm.html
@@ -37,7 +37,7 @@
 		<h1>Calm</h1>
 		<h1><span class="smaller">And</span></h1>
 		<h1>Do</h1>
-		<h1>Coding</h1>
+		<h1>Problem Solving</h1>
 	</div>
 
 </body>
